--- a/CarRental/Views/Customer/RegisterForCustomer.cshtml
+++ b/CarRental/Views/Customer/RegisterForCustomer.cshtml
@@ -143,13 +143,13 @@
     <div class="register-card">
         <h2><i class="bi bi-person-plus-fill"></i> Customer Register</h2>
 
-        @using (Html.BeginForm("RegisterForCustomer", "Customer", FormMethod.Post))
+        @using (Html.BeginForm("Index", "Login", FormMethod.Post))
         {
             @Html.AntiForgeryToken()
 
             <div class="mb-2">
                 @Html.LabelFor(m => m.FullName, new { @class = "form-label" })
-                @Html.TextBoxFor(m => m.FullName, new { @class = "form-control", placeholder = "Full Name" })
+                @Html.TextBoxFor(m => m.FullName, new { @class = "form-control", placeholder = "Full Name" }) 
                 @Html.ValidationMessageFor(m => m.FullName, "", new { @class = "text-warning small" })
             </div>
 
